Fix crash on undo after importing assistant set

Before this commit, importing assistant set was not undoable,
which broke internal state of the tool, which led to crash.
This commit makes importing the assistant set undoable,
preventing the crash.

BUG:455584


(cherry picked from commit 6579f94c8f35311007212cca38d891e7c0c1f0c6)